commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentupdatedata.yml
@@ -13,7 +13,7 @@ items:
       - 'excel!Excel.Interfaces.CommentUpdateData#resolved:member'
   - uid: 'excel!Excel.Interfaces.CommentUpdateData#content:member'
     summary: |-
-      获取或设置批注的内容。 字符串为纯文本。
+      批注的内容。 字符串为纯文本。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: content
@@ -28,10 +28,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.CommentUpdateData#resolved:member'
     summary: |-
-      获取或设置批注线程的状态。 值为 "true" 表示注释线程处于 "已解决" 状态。
+      注释线程状态。 值为 "true" 表示解析注释线程。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: resolved
     fullName: resolved
     langs:
