--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.filterloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.filterloadoptions.yml
@@ -28,7 +28,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.FilterLoadOptions#criteria:member'
     summary: |-
-      给定列上当前应用的筛选器。 只读。
+      给定列上当前应用的筛选器。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: criteria
