--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.shapecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.shapecollectionloadoptions.yml
@@ -52,7 +52,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeCollectionLoadOptions#altTextDescription:member'
     summary: |-
-      对于集合中的每一项：返回或设置 Shape 对象的替代说明文本。
+      对于集合中的每一项：指定 Shape 对象的替代说明文本。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: altTextDescription
@@ -67,7 +67,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeCollectionLoadOptions#altTextTitle:member'
     summary: |-
-      对于集合中的每一项：返回或设置 Shape 对象的可选标题文本。
+      对于集合中的每一项：为 Shape 对象指定可选的标题文本。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: altTextTitle
@@ -82,7 +82,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeCollectionLoadOptions#connectionSiteCount:member'
     summary: |-
-      对于集合中的每个项目：返回此形状上的连接结点的数目。 只读。
+      对于集合中的每个项目：返回此形状上的连接结点的数目。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: connectionSiteCount
@@ -127,7 +127,7 @@ items:
           - 'excel!Excel.Interfaces.GeometricShapeLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ShapeCollectionLoadOptions#geometricShapeType:member'
     summary: |-
-      对于集合中的每一项：表示此几何形状的几何形状类型。 有关详细信息，请参阅 Excel.GeometricShapeType。 如果形状类型不是“GeometricShape”，返回 NULL。
+      对于集合中的每个项目：指定此几何形状的几何形状类型。 有关详细信息，请参阅 Excel.GeometricShapeType。 如果形状类型不是“GeometricShape”，返回 NULL。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: geometricShapeType
@@ -157,7 +157,7 @@ items:
           - 'excel!Excel.Interfaces.ShapeGroupLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ShapeCollectionLoadOptions#height:member'
     summary: |-
-      对于集合中的每个项目：表示形状的高度（以磅为单位）。 当设置为负值或零作为输入时，将引发无效参数异常。
+      对于集合中的每一项：指定形状的高度（以磅为单位）。 当设置为负值或零作为输入时，将引发无效参数异常。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -172,7 +172,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeCollectionLoadOptions#id:member'
     summary: |-
-      对于集合中的每一项：代表形状标识符。 只读。
+      对于集合中的每一项：指定形状标识符。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -217,7 +217,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeCollectionLoadOptions#level:member'
     summary: |-
-      对于集合中的每一项：代表指定形状的级别。 例如，级别 0 表示形状不是任何组的一部分，级别 1 表示形状是顶级组的一部分，级别 2 表示形状是顶级子组的一部分。
+      对于集合中的每一项：指定指定形状的级别。 例如，级别 0 表示形状不是任何组的一部分，级别 1 表示形状是顶级组的一部分，级别 2 表示形状是顶级子组的一部分。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: level
@@ -262,7 +262,7 @@ items:
           - 'excel!Excel.Interfaces.ShapeLineFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ShapeCollectionLoadOptions#lockAspectRatio:member'
     summary: |-
-      对于集合中的每一项：指定是否锁定此形状的纵横比。
+      对于集合中的每个项目：指定此形状的纵横比是否已锁定。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: lockAspectRatio
@@ -277,7 +277,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeCollectionLoadOptions#name:member'
     summary: |-
-      对于集合中的每一项：代表形状的名称。
+      对于集合中的每一项：指定形状的名称。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -292,7 +292,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeCollectionLoadOptions#parentGroup:member'
     summary: |-
-      对于集合中的每个项目：代表此形状的父组。
+      对于集合中的每一项：指定此形状的父组。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: parentGroup
@@ -322,7 +322,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeCollectionLoadOptions#rotation:member'
     summary: |-
-      对于集合中的每个项目：表示形状的旋转角度（以度为单位）。
+      对于集合中的每个项目：指定形状的旋转角度（以度为单位）。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rotation
@@ -367,7 +367,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeCollectionLoadOptions#type:member'
     summary: |-
-      对于集合中的每一项：返回此形状的类型。 有关详细信息，请参阅 Excel.ShapeType。 只读。
+      对于集合中的每一项：返回此形状的类型。 有关详细信息，请参阅 Excel.ShapeType。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
@@ -382,7 +382,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeCollectionLoadOptions#visible:member'
     summary: |-
-      对于集合中的每一项：表示此形状的可见性。
+      对于集合中的每个项目：指定形状是否可见。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
@@ -397,7 +397,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeCollectionLoadOptions#width:member'
     summary: |-
-      对于集合中的每个项目：代表形状的宽度（以磅为单位）。 当设置为负值或零作为输入时，将引发无效参数异常。
+      对于集合中的每一项：指定形状的宽度（以磅为单位）。 当设置为负值或零作为输入时，将引发无效参数异常。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
@@ -412,7 +412,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeCollectionLoadOptions#zOrderPosition:member'
     summary: |-
-      对于集合中的每一项：返回指定的形状在 z-顺序中的位置，0表示顺序堆栈的底部。 只读。
+      对于集合中的每一项：返回指定的形状在 z-顺序中的位置，0表示顺序堆栈的底部。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: zOrderPosition
