--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.shapeupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.shapeupdatedata.yml
@@ -25,7 +25,7 @@ items:
       - 'excel!Excel.Interfaces.ShapeUpdateData#width:member'
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#altTextDescription:member'
     summary: |-
-      返回或设置形状对象的可选说明文本。
+      指定 Shape 对象的替代说明文本。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: altTextDescription
@@ -40,7 +40,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#altTextTitle:member'
     summary: |-
-      返回或设置形状对象的可选标题文本。
+      为 Shape 对象指定可选的标题文本。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: altTextTitle
@@ -70,7 +70,7 @@ items:
           - 'excel!Excel.Interfaces.ShapeFillUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#geometricShapeType:member'
     summary: |-
-      表示此几何形状的几何形状类型。 有关详细信息，请参阅 Excel.GeometricShapeType。 如果形状类型不是“GeometricShape”，返回 NULL。
+      指定此几何形状的几何形状类型。 有关详细信息，请参阅 Excel.GeometricShapeType。 如果形状类型不是“GeometricShape”，返回 NULL。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: geometricShapeType
@@ -85,7 +85,7 @@ items:
           - 'excel!Excel.Interfaces.ShapeUpdateData#geometricShapeType~0:complex'
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#height:member'
     summary: |-
-      表示形状的高度（以磅为单位）。 当设置为负值或零作为输入时，将引发无效参数异常。
+      指定形状的高度（以磅为单位）。 当设置为负值或零作为输入时，将引发无效参数异常。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -130,7 +130,7 @@ items:
           - 'excel!Excel.Interfaces.ShapeLineFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#lockAspectRatio:member'
     summary: |-
-      指定此形状的纵横比是否锁定。
+      指定此形状的纵横比是否已锁定。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: lockAspectRatio
@@ -145,7 +145,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#name:member'
     summary: |-
-      表示形状的名称。
+      指定形状的名称。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -175,7 +175,7 @@ items:
           - 'excel!Excel.Interfaces.ShapeUpdateData#placement~0:complex'
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#rotation:member'
     summary: |-
-      表示形状的旋转度数。
+      指定形状的旋转角度（以度为单位）。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rotation
@@ -205,7 +205,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#visible:member'
     summary: |-
-      表示此形状的可视性。
+      指定形状是否可见。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
@@ -220,7 +220,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#width:member'
     summary: |-
-      表示形状的宽度（以磅为单位）。 当设置为负值或零作为输入时，将引发无效参数异常。
+      指定形状的宽度（以磅为单位）。 当设置为负值或零作为输入时，将引发无效参数异常。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
