--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.slicercollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.slicercollectionloadoptions.yml
@@ -70,7 +70,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.SlicerCollectionLoadOptions#id:member'
     summary: |-
-      对于集合中的每一项：表示切片器的唯一 id。 只读。
+      对于集合中的每一项：表示切片器的唯一 id。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
