--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.nameditemdata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.nameditemdata.yml
@@ -15,7 +15,7 @@ items:
       - 'excel!Excel.Interfaces.NamedItemData#visible:member'
   - uid: 'excel!Excel.Interfaces.NamedItemData#name:member'
     summary: |-
-      对象的名称。 只读。
+      对象的名称。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -30,7 +30,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.NamedItemData#type:member'
     summary: |-
-      指明 name 公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。 只读。
+      指定由名称的公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。
 
       \[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
@@ -45,7 +45,7 @@ items:
           - 'excel!Excel.Interfaces.NamedItemData#type~0:complex'
   - uid: 'excel!Excel.Interfaces.NamedItemData#value:member'
     summary: |-
-      表示 name 公式计算出的值。 对于已命名区域，将返回区域地址。 只读。
+      表示 name 公式计算出的值。 对于已命名区域，将返回区域地址。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
