--- a/docs/docs-ref-autogen/excel/excel/excel.chartpoint.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.chartpoint.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartPoint#context:member'
@@ -43,7 +43,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartPoint#dataLabel:member'
     summary: |-
-      返回图表点的数据标签。 只读。
+      返回图表点的数据标签。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dataLabel
@@ -58,7 +58,7 @@ items:
           - 'excel!Excel.ChartDataLabel:class'
   - uid: 'excel!Excel.ChartPoint#format:member'
     summary: |-
-      封装图表点的格式属性。 只读。
+      封装图表点的格式属性。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -150,7 +150,7 @@ items:
                       }
   - uid: 'excel!Excel.ChartPoint#markerBackgroundColor:member'
     summary: |-
-      表示数据点的标记背景色的 HTML 颜色代码。 例如， \#FF0000 表示红色。
+      数据点的标记背景色的 HTML 颜色代码表示形式（例如， \#FF0000 表示红色）。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerBackgroundColor
@@ -165,7 +165,7 @@ items:
           - string
   - uid: 'excel!Excel.ChartPoint#markerForegroundColor:member'
     summary: |-
-      表示数据点的标记前景色的 HTML 颜色代码。 例如， \#FF0000 表示红色。
+      数据点的标记前景色的 HTML 颜色代码表示形式（例如， \#FF0000 表示红色）。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerForegroundColor
@@ -233,7 +233,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartPoint#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -267,7 +267,7 @@ items:
         description: ''
   - uid: 'excel!Excel.ChartPoint#value:member'
     summary: |-
-      返回图表点的值。 只读。
+      返回图表点的值。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
@@ -281,7 +281,7 @@ items:
         type:
           - any
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -304,7 +304,7 @@ references:
         fullName: ' | "Invalid" | "Automatic" | "None" | "Square" | "Diamond" | "Triangle" | "X" | "Star" | "Dot" | "Dash" | "Circle" | "Plus" | "Picture"'
   - uid: 'excel!Excel.Interfaces.ChartPointUpdateData:interface'
     name: Interfaces.ChartPointUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartPointData:interface'
     name: Excel.Interfaces.ChartPointData
