--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartdatalabelloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartdatalabelloadoptions.yml
@@ -48,7 +48,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#autoText:member'
     summary: |-
-      该布尔值表示数据标签是否根据上下文自动生成相应的文本。
+      指定数据标签是否根据上下文自动生成相应的文本。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoText
@@ -93,7 +93,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#height:member'
     summary: |-
-      返回图表数据标签的高度，以磅为单位。 只读。 如果图表数据标签不可见，则为 Null。
+      返回图表数据标签的高度，以磅为单位。 如果图表数据标签不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -138,7 +138,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#linkNumberFormat:member'
     summary: |-
-      布尔值，表示数字格式是否链接到单元格（以便在单元格中更改时标签中的数字格式会发生改变）。
+      指定数字格式是否链接到单元格（以便数字格式在单元格更改时更改标签中的数字格式）。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: linkNumberFormat
@@ -198,7 +198,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showBubbleSize:member'
     summary: |-
-      该布尔值表示数据标签气泡大小是否可见。
+      指定数据标签气泡大小是否可见。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showBubbleSize
@@ -213,7 +213,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showCategoryName:member'
     summary: |-
-      表示数据标签分类名称是否可见的布尔值。
+      指定数据标签类别名称是否可见。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showCategoryName
@@ -228,7 +228,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showLegendKey:member'
     summary: |-
-      该布尔值表示数据标签图例标示是否可见。
+      指定数据标签图例标示是否可见。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showLegendKey
@@ -243,7 +243,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showPercentage:member'
     summary: |-
-      该布尔值表示数据标签百分比是否可见。
+      指定数据标签百分比是否可见。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showPercentage
@@ -258,7 +258,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showSeriesName:member'
     summary: |-
-      该布尔值表示数据标签系列名称是否可见。
+      指定数据标签系列名称是否可见。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showSeriesName
@@ -273,7 +273,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showValue:member'
     summary: |-
-      该布尔值表示数据标签值是否可见。
+      指定数据标签值是否可见。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showValue
@@ -348,7 +348,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#width:member'
     summary: |-
-      返回图表数据标签的宽度，以磅为单位。 只读。 如果图表数据标签不可见，则为 Null。
+      返回图表数据标签的宽度，以磅为单位。 如果图表数据标签不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
