--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartseriescollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartseriescollectionloadoptions.yml
@@ -72,7 +72,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#axisGroup:member'
     summary: |-
-      对于集合中的每一项：返回或设置指定系列的组。 读/写
+      对于集合中的每一项：指定指定系列的组。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axisGroup
@@ -117,7 +117,7 @@ items:
           - 'excel!Excel.Interfaces.ChartBoxwhiskerOptionsLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#bubbleScale:member'
     summary: |-
-      对于集合中的每一项：此值可以是从0（零）到300的整数值，表示默认大小的百分比。 该属性仅适用于气泡图。 读/写。
+      对于集合中的每一项：此值可以是从0（零）到300的整数值，表示默认大小的百分比。 该属性仅适用于气泡图。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bubbleScale
@@ -177,7 +177,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#explosion:member'
     summary: |-
-      对于集合中的每一项：返回或设置饼图或圆环图切片的分解值。 如果未分解（切片尖端位于饼图中心），则返回 0（零）。 读/写。
+      对于集合中的每一项：指定饼图或圆环图切片的分解值。 如果未分解（切片尖端位于饼图中心），则返回 0（零）。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: explosion
@@ -192,7 +192,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#filtered:member'
     summary: |-
-      对于集合中的每一项：布尔值，表示是否筛选系列。 不适用于曲面图。
+      对于集合中的每一项：指定是否筛选系列。 不适用于曲面图。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: filtered
@@ -207,7 +207,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#firstSliceAngle:member'
     summary: |-
-      对于集合中的每一项：返回或设置第一个饼图或圆环图的扇区的角度（以度为单位）（从垂直方向顺时针方向）。 只适用于饼图、三维饼图和圆环图。 可以是 0 到 360 之间的值。 读/写
+      对于集合中的每一项：指定第一个饼图或圆环图的扇区的角度（以度为单位）（从垂直方向顺时针方向）。 只适用于饼图、三维饼图和圆环图。 可以是0到360之间的值。指定负 DataBar 的填充颜色是否与正 DataBar 相同。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: firstSliceAngle
@@ -252,7 +252,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#gradientMaximumColor:member'
     summary: |-
-      对于集合中的每个项目：返回或设置区域地图图表系列的最大值的颜色。 读/写。
+      对于集合中的每个项目：指定区域地图图表系列的最大值的颜色。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientMaximumColor
@@ -267,7 +267,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#gradientMaximumType:member'
     summary: |-
-      对于集合中的每个项目：返回或设置区域地图图表系列的最大值的类型。 读/写。
+      对于集合中的每个项目：指定区域地图图表系列的最大值的类型。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientMaximumType
@@ -282,7 +282,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#gradientMaximumValue:member'
     summary: |-
-      对于集合中的每个项目：返回或设置区域地图图表系列的最大值。 读/写。
+      对于集合中的每个项目：指定区域地图图表系列的最大值。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientMaximumValue
@@ -297,7 +297,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#gradientMidpointColor:member'
     summary: |-
-      对于集合中的每个项目：返回或设置区域地图图表系列的中点值的颜色。 读/写。
+      对于集合中的每个项目：指定区域地图图表系列的中点值的颜色。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientMidpointColor
@@ -312,7 +312,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#gradientMidpointType:member'
     summary: |-
-      对于集合中的每个项目：返回或设置区域地图图表系列的中点值的类型。 读/写。
+      对于集合中的每个项目：指定区域地图图表系列的中点值的类型。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientMidpointType
@@ -327,7 +327,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#gradientMidpointValue:member'
     summary: |-
-      对于集合中的每个项目：返回或设置区域地图图表系列的中点值。 读/写。
+      对于集合中的每个项目：指定区域地图图表系列的中点值。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientMidpointValue
@@ -342,7 +342,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#gradientMinimumColor:member'
     summary: |-
-      对于集合中的每个项目：返回或设置区域地图图表系列的最小值的颜色。 读/写。
+      对于集合中的每个项目：指定区域地图图表系列的最小值的颜色。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientMinimumColor
@@ -357,7 +357,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#gradientMinimumType:member'
     summary: |-
-      对于集合中的每个项目：返回或设置区域地图图表系列的最小值的类型。 读/写。
+      对于集合中的每个项目：指定区域地图图表系列的最小值的类型。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientMinimumType
@@ -372,7 +372,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#gradientMinimumValue:member'
     summary: |-
-      对于集合中的每个项目：返回或设置区域地图图表系列的最小值。 读/写。
+      对于集合中的每个项目：指定区域地图图表系列的最小值。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientMinimumValue
@@ -387,7 +387,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#gradientStyle:member'
     summary: |-
-      对于集合中的每个项目：返回或设置区域地图图表的系列渐变样式。 读/写。
+      对于集合中的每一项：指定区域映射图的系列渐变样式。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientStyle
@@ -402,7 +402,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#hasDataLabels:member'
     summary: |-
-      对于集合中的每一项：布尔值，表示该系列是否具有数据标签。
+      对于集合中的每个项目：指定该系列是否具有数据标签。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: hasDataLabels
@@ -417,7 +417,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#invertColor:member'
     summary: |-
-      对于集合中的每一项：返回或设置系列中的负数据点的填充颜色。 读/写。
+      对于集合中的每一项：指定系列中的负数据点的填充颜色。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: invertColor
@@ -432,7 +432,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#invertIfNegative:member'
     summary: |-
-      对于集合中的每一项： True 如果 Microsoft Excel 在对应于负数时反转项中的模式。 读/写。
+      对于集合中的每一项： True 如果 Excel 在对应于负数时反转项中的模式。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: invertIfNegative
@@ -462,7 +462,7 @@ items:
           - 'excel!Excel.Interfaces.ChartMapOptionsLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#markerBackgroundColor:member'
     summary: |-
-      对于集合中的每一项：表示图表系列的标记背景色。
+      对于集合中的每一项：指定图表系列的标记背景色。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerBackgroundColor
@@ -477,7 +477,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#markerForegroundColor:member'
     summary: |-
-      对于集合中的每一项：表示图表系列的标记前景色。
+      对于集合中的每一项：指定图表系列的标记前景色。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerForegroundColor
@@ -492,7 +492,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#markerSize:member'
     summary: |-
-      对于集合中的每一项：表示图表系列的标记大小。
+      对于集合中的每一项：指定图表系列的标记大小。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerSize
@@ -507,7 +507,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#markerStyle:member'
     summary: |-
-      对于集合中的每一项：表示图表系列的标记样式。 有关详细信息，请参阅 ChartMarkerStyle。
+      对于集合中的每一项：指定图表系列的标记样式。 有关详细信息，请参阅 ChartMarkerStyle。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerStyle
@@ -522,7 +522,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#name:member'
     summary: |-
-      对于集合中的每一项：代表图表中系列的名称。
+      对于集合中的每一项：指定图表中的系列的名称。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -537,7 +537,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#overlap:member'
     summary: |-
-      对于集合中的每一项：指定栏和列的放置方式。 可以是–100到100之间的值。 只适用于二维条形图和二维柱形图。 读/写。
+      对于集合中的每一项：指定栏和列的放置方式。 可以是–100到100之间的值。 只适用于二维条形图和二维柱形图。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overlap
@@ -552,7 +552,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#parentLabelStrategy:member'
     summary: |-
-      对于集合中的每一项：返回或设置树状图图表的系列父标签策略区域。 读/写。
+      对于集合中的每一项：指定树状图图表的系列父标签策略区域。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: parentLabelStrategy
@@ -567,7 +567,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#plotOrder:member'
     summary: |-
-      对于集合中的每一项：代表图表系列在图表组中的绘制顺序。
+      对于集合中的每一项：指定图表系列在图表组中的绘制顺序。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: plotOrder
@@ -582,7 +582,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#points:member'
     summary: |-
-      对于集合中的每一项：代表系列中所有数据点的集合。
+      对于集合中的每一项：返回系列中所有数据点的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: points
@@ -597,7 +597,7 @@ items:
           - 'excel!Excel.Interfaces.ChartPointsCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#secondPlotSize:member'
     summary: |-
-      对于集合中的每一项：返回或设置复合饼图或复合条饼图中的第二部分的大小，以主饼图大小的百分比表示。 可以是 5 到 200 之间的值。 读/写。
+      对于集合中的每一项：指定复合饼图或复合条饼图中的第二部分的大小，以主饼图大小的百分比表示。 可以是 5 到 200 之间的值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: secondPlotSize
@@ -612,7 +612,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#showConnectorLines:member'
     summary: |-
-      对于集合中的每一项：指定在瀑布图中是否显示连接符线。 读/写。
+      对于集合中的每一项：指定在瀑布图中是否显示连接符线。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showConnectorLines
@@ -627,7 +627,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#showLeaderLines:member'
     summary: |-
-      对于集合中的每一项：指定是否为系列中的每个数据标签显示引导线。 读/写。
+      对于集合中的每一项：指定是否为系列中的每个数据标签显示引导线。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showLeaderLines
@@ -642,7 +642,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#showShadow:member'
     summary: |-
-      对于集合中的每一项：布尔值，表示系列是否具有阴影。
+      对于集合中的每一项：指定系列是否具有阴影。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showShadow
@@ -657,7 +657,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#smooth:member'
     summary: |-
-      对于集合中的每一项：布尔值，表示系列是否平滑。 仅适用于折线图和散点图。
+      对于集合中的每一项：指定系列是否平滑。 仅适用于折线图和散点图。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: smooth
@@ -672,7 +672,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#splitType:member'
     summary: |-
-      对于集合中的每一项：返回或设置一个复合饼图或复合条饼图中的两个部分的分割方式。 读/写。
+      对于集合中的每一项：指定拆分复合饼图或复合条饼图条形图的两个部分的方式。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: splitType
@@ -687,7 +687,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#splitValue:member'
     summary: |-
-      对于集合中的每一项：返回或设置用于分隔复合饼图或复合条饼图的两个部分的阈值。 读/写。
+      对于集合中的每一项：指定用于分隔复合饼图或复合条饼图中的两个部分的临界值。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: splitValue
@@ -702,7 +702,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions#varyByCategories:member'
     summary: |-
-      对于集合中的每个项目：如果 Microsoft Excel 为每个数据标记分配不同的颜色或图案，则为 True。 图表必须只包含一个系列。 读/写。
+      对于集合中的每个项目：如果 Excel 为每个数据标记分配不同的颜色或图案，则为 True。 图表必须只包含一个系列。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: varyByCategories
