--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.tablecolumnloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.tablecolumnloadoptions.yml
@@ -47,7 +47,7 @@ items:
           - 'excel!Excel.Interfaces.FilterLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#id:member'
     summary: |-
-      返回标识表内的列的唯一键。 只读。
+      返回标识表内的列的唯一键。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -62,7 +62,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#index:member'
     summary: |-
-      返回表的列集合内列的索引编号。 从零开始编制索引。 只读。
+      返回表的列集合内列的索引编号。 从零开始编制索引。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: index
@@ -77,7 +77,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#name:member'
     summary: |-
-      表示表列的名称。
+      指定表格列的名称。
 
       \[[API 集： ExcelApi 1.1 用于获取名称; 1.4 用于设置名称。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]
     name: name
