commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.rangefillupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.rangefillupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RangeFillUpdateData:interface'
-    summary: '<span data-ttu-id="62f63-101">一个用于更新 RangeFill 对象上的数据的接口，可用于`rangeFill.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="62f63-101">An interface for updating data on the RangeFill object, for use in `rangeFill.set({ ... })`</span></span><!-- --><span data-ttu-id="62f63-102">.</span><span class="sxs-lookup"><span data-stu-id="62f63-102"></span></span>'
+    summary: '一个用于更新 RangeFill 对象上的数据的接口，可用于`rangeFill.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.RangeFillUpdateData
     fullName: Excel.Interfaces.RangeFillUpdateData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.RangeFillUpdateData#color:member'
   - uid: 'excel!Excel.Interfaces.RangeFillUpdateData#color:member'
     summary: |-
-      <span data-ttu-id="62f63-103">代表表单\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的背景色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="62f63-103">HTML color code representing the color of the background, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange")</span></span>
+      代表表单\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的背景色的 HTML 颜色代码。
 
-      <span data-ttu-id="62f63-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="62f63-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
