--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartlegendentryloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartlegendentryloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="074b0-101">表示 legendEntryCollection 中的 legendEntry。</span><span class="sxs-lookup"><span data-stu-id="074b0-101">Represents the legendEntry in legendEntryCollection.</span></span>
+      表示 legendEntryCollection 中的 legendEntry。
 
-      <span data-ttu-id="074b0-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="074b0-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartLegendEntryLoadOptions
     fullName: Excel.Interfaces.ChartLegendEntryLoadOptions
     langs:
@@ -20,7 +20,7 @@ items:
       - 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#visible:member'
       - 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#width:member'
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#$all:member'
-    summary: '<span data-ttu-id="074b0-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="074b0-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="074b0-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="074b0-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="074b0-105">).</span><span class="sxs-lookup"><span data-stu-id="074b0-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -33,9 +33,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#height:member'
     summary: |-
-      <span data-ttu-id="074b0-106">表示图表图例上的 legendEntry 的高度。</span><span class="sxs-lookup"><span data-stu-id="074b0-106">Represents the height of the legendEntry on the chart legend.</span></span>
+      指定图表图例上的 legendEntry 的高度。
 
-      <span data-ttu-id="074b0-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="074b0-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
     fullName: height
     langs:
@@ -48,9 +48,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#index:member'
     summary: |-
-      <span data-ttu-id="074b0-108">表示图表图例中的 legendEntry 的索引。</span><span class="sxs-lookup"><span data-stu-id="074b0-108">Represents the index of the legendEntry in the chart legend.</span></span>
+      指定图表图例中的 legendEntry 的索引。
 
-      <span data-ttu-id="074b0-109">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="074b0-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: index
     fullName: index
     langs:
@@ -63,9 +63,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#left:member'
     summary: |-
-      <span data-ttu-id="074b0-110">表示图表 legendEntry 的左侧。</span><span class="sxs-lookup"><span data-stu-id="074b0-110">Represents the left of a chart legendEntry.</span></span>
+      指定图表 legendEntry 的左侧。
 
-      <span data-ttu-id="074b0-111">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="074b0-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -78,9 +78,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#top:member'
     summary: |-
-      <span data-ttu-id="074b0-112">表示图表 legendEntry 的顶部。</span><span class="sxs-lookup"><span data-stu-id="074b0-112">Represents the top of a chart legendEntry.</span></span>
+      指定图表 legendEntry 的顶部。
 
-      <span data-ttu-id="074b0-113">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="074b0-113">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
@@ -93,9 +93,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#visible:member'
     summary: |-
-      <span data-ttu-id="074b0-114">表示图表图例条目可见。</span><span class="sxs-lookup"><span data-stu-id="074b0-114">Represents the visible of a chart legend entry.</span></span>
+      表示图表图例条目可见。
 
-      <span data-ttu-id="074b0-115">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="074b0-115">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
@@ -108,9 +108,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#width:member'
     summary: |-
-      <span data-ttu-id="074b0-116">表示图表图例上的 legendEntry 的宽度。</span><span class="sxs-lookup"><span data-stu-id="074b0-116">Represents the width of the legendEntry on the chart Legend.</span></span>
+      表示图表图例上的 legendEntry 的宽度。
 
-      <span data-ttu-id="074b0-117">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="074b0-117">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
