--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.conditionalrangeborderloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.conditionalrangeborderloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="5b48e-101">代表对象的边框。</span><span class="sxs-lookup"><span data-stu-id="5b48e-101">Represents the border of an object.</span></span>
+      代表对象的边框。
 
-      <span data-ttu-id="5b48e-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5b48e-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ConditionalRangeBorderLoadOptions
     fullName: Excel.Interfaces.ConditionalRangeBorderLoadOptions
     langs:
@@ -17,7 +17,7 @@ items:
       - 'excel!Excel.Interfaces.ConditionalRangeBorderLoadOptions#sideIndex:member'
       - 'excel!Excel.Interfaces.ConditionalRangeBorderLoadOptions#style:member'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderLoadOptions#$all:member'
-    summary: '<span data-ttu-id="5b48e-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="5b48e-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="5b48e-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="5b48e-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="5b48e-105">).</span><span class="sxs-lookup"><span data-stu-id="5b48e-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -30,9 +30,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderLoadOptions#color:member'
     summary: |-
-      <span data-ttu-id="5b48e-106">代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="5b48e-106">HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线颜色的 HTML 颜色代码。
 
-      <span data-ttu-id="5b48e-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5b48e-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -45,9 +45,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderLoadOptions#sideIndex:member'
     summary: |-
-      <span data-ttu-id="5b48e-108">指示边框的特定边的常量值。</span><span class="sxs-lookup"><span data-stu-id="5b48e-108">Constant value that indicates the specific side of the border.</span></span> <span data-ttu-id="5b48e-109">有关详细信息，请参阅 ConditionalRangeBorderIndex。</span><span class="sxs-lookup"><span data-stu-id="5b48e-109">See Excel.ConditionalRangeBorderIndex for details.</span></span> <span data-ttu-id="5b48e-110">只读。</span><span class="sxs-lookup"><span data-stu-id="5b48e-110">Read-only.</span></span>
+      指示边框的特定边的常量值。 有关详细信息，请参阅 ConditionalRangeBorderIndex。
 
-      <span data-ttu-id="5b48e-111">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5b48e-111">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: sideIndex
     fullName: sideIndex
     langs:
@@ -60,9 +60,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderLoadOptions#style:member'
     summary: |-
-      <span data-ttu-id="5b48e-112">线条样式的常量之一，指定边框的线条样式。</span><span class="sxs-lookup"><span data-stu-id="5b48e-112">One of the constants of line style specifying the line style for the border.</span></span> <span data-ttu-id="5b48e-113">有关详细信息，请参阅 BorderLineStyle。</span><span class="sxs-lookup"><span data-stu-id="5b48e-113">See Excel.BorderLineStyle for details.</span></span>
+      线条样式的常量之一，指定边框的线条样式。 有关详细信息，请参阅 BorderLineStyle。
 
-      <span data-ttu-id="5b48e-114">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5b48e-114">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: style
     fullName: style
     langs:
