--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.nameditemcollection.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.nameditemcollection.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.NamedItemCollection:class'
     summary: |-
-      <span data-ttu-id="e995c-101">属于工作簿或工作表的所有 NamedItem 对象的集合，具体取决于它的访问方式。</span><span class="sxs-lookup"><span data-stu-id="e995c-101">A collection of all the NamedItem objects that are part of the workbook or worksheet, depending on how it was reached.</span></span>
+      属于工作簿或工作表的所有 NamedItem 对象的集合，具体取决于它的访问方式。
 
-      <span data-ttu-id="e995c-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e995c-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.NamedItemCollection
     fullName: Excel.NamedItemCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.NamedItemCollection#context:member'
@@ -22,7 +22,7 @@ items:
       - 'excel!Excel.NamedItemCollection#load:member(3)'
       - 'excel!Excel.NamedItemCollection#toJSON:member(1)'
   - uid: 'excel!Excel.NamedItemCollection#context:member'
-    summary: <span data-ttu-id="e995c-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="e995c-103">The request context associated with the object.</span></span> <span data-ttu-id="e995c-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="e995c-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -35,9 +35,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.NamedItemCollection#getItem:member(1)'
     summary: |-
-      <span data-ttu-id="e995c-105">使用其名称获取 NamedItem 对象。</span><span class="sxs-lookup"><span data-stu-id="e995c-105">Gets a NamedItem object using its name.</span></span>
+      使用其名称获取 NamedItem 对象。
 
-      <span data-ttu-id="e995c-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e995c-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItem(name)
     fullName: getItem(name)
     langs:
@@ -51,7 +51,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="e995c-107">示例</span><span class="sxs-lookup"><span data-stu-id="e995c-107">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Excel.run(function (ctx) { 
@@ -70,11 +70,11 @@ items:
           ```
       parameters:
         - id: name
-          description: <span data-ttu-id="e995c-108">Nameditem 名称。</span><span class="sxs-lookup"><span data-stu-id="e995c-108">Nameditem name.</span></span>
+          description: Nameditem 名称。
           type:
             - string
   - uid: 'excel!Excel.NamedItemCollection#items:member'
-    summary: <span data-ttu-id="e995c-109">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="e995c-109">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
     langs:
@@ -86,7 +86,7 @@ items:
         type:
           - 'excel!Excel.NamedItemCollection#items~0:complex'
   - uid: 'excel!Excel.NamedItemCollection#load:member(1)'
-    summary: <span data-ttu-id="e995c-110">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="e995c-110">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="e995c-111">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="e995c-111">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -100,11 +100,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="e995c-112">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="e995c-112">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.NamedItemCollection#load~0:complex'
   - uid: 'excel!Excel.NamedItemCollection#load:member(2)'
-    summary: <span data-ttu-id="e995c-113">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="e995c-113">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="e995c-114">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="e995c-114">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -118,7 +118,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="e995c-115">示例</span><span class="sxs-lookup"><span data-stu-id="e995c-115">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Excel.run(function (ctx) { 
@@ -140,11 +140,11 @@ items:
           ```
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="e995c-116">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="e995c-116">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.NamedItemCollection#load:member(3)'
-    summary: <span data-ttu-id="e995c-117">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="e995c-117">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="e995c-118">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="e995c-118">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -158,11 +158,11 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="e995c-119">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="e995c-119">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
-            - 'excel!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.NamedItemCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="e995c-120">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="e995c-120">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="e995c-121">.</span><span class="sxs-lookup"><span data-stu-id="e995c-121"></span></span> <span data-ttu-id="e995c-122">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="e995c-122"></span></span><!-- --><span data-ttu-id="e995c-123">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.NamedItemCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.NamedItemCollectionData`</span><span class="sxs-lookup"><span data-stu-id="e995c-123">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.NamedItemCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.NamedItemCollectionData`</span></span><!-- --><span data-ttu-id="e995c-124">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="e995c-124">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.NamedItemCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.NamedItemCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -175,7 +175,7 @@ items:
           - 'excel!Excel.Interfaces.NamedItemCollectionData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -204,7 +204,7 @@ references:
       - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
         name: Excel.Interfaces.CollectionLoadOptions
         fullName: Excel.Interfaces.CollectionLoadOptions
-  - uid: 'excel!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionData:interface'
     name: Excel.Interfaces.NamedItemCollectionData
